<resources>
    <string name="app_name">News Publisher</string>
    <string name="headline_no">A theory claims all Skittles taste the same so we did a blind test - Are you really tasting the rainbow?</string>
    <string name="can_not_read_gaid">Oops, I can\'t read GAID from this device!</string>
    <string name="it_is_lat">You have turned on Limited Ad Tracking!</string>
    <string name="play_game">Play Game</string>
    <string name="game_over">Game Over</string>
    <string name="title_news_activity">World News</string>
    <string name="title_game_over_activity">Game Result</string>
    <string name="title_play_game_activity">Useless Game</string>
    <string name="article_text_1">A theory claims all Skittles taste the same so we did a blind test - Are you really tasting the rainbow?</string>
    <string name="article_text_2">Mobile marketing analytics firm AppsFlyer surpasses $100 million in annual recurring revenue</string>
    <string name="article_text_3">Do small acts of kindness add up?</string>
    <string name="article_text_4">Why you can’t stop eating salted caramel, according to science</string>
    <string name="article_text_5">Woman solves crime after matching with thief on Tinder</string>
    <string name="article_text_6">Cheers! World\'s first beer-flavoured bean set for UK release</string>
    <string name="article_text_7">Intricate, beautiful sugar cubes could be the key to getting 3D</string>
    <string name="close">Close</string>
    <string name="list_all">List All ADs</string>
    <string name="input_package_name">Input package name</string>
    <string name="inapp_ads">In-App ADs</string>
    <string name="inapp_webview">WebView ADs</string>
    <string name="inapp_webview_fascode">WebView ADs(fascode_int)</string>
    <string name="open_browser">Open Browser</string>
    <string name="open_browser_fascode">Open Browser(fascode_int)</string>
    <string name="inapp_ads_via_onelink">In-App ADs via OneLink</string>
    <string name="webview_ads_via_onelink">WebView ADs via OneLink</string>
    <string name="browser_ads_via_onelink">Browser ADs via OneLink</string>
    <string name="inapp_ads_via_brandedlink">In-App ADs via Branded Link</string>
    <string name="webview_ads_via_brandedlink">WebView ADs via Branded Link</string>
    <string name="browser_ads_via_brandedlink">Browser ADs via Branded Link</string>
    <string name="subdomain">SubDomain</string>
    <string name="path">Path</string>
    <string name="add_param">Add Param</string>
    <string name="create">Create</string>
    <string name="url">URL</string>
    <string name="click_url">Click URL</string>
    <string name="inapp_ads_fascode">In-App Ads(fascode_int)</string>
    <string name="input_pid">Input pid (e.g. fascode_int)</string>
    <string name="input_url">Input url (for Branded Links)</string>


</resources>
